caml_files/parser.output
   0  $accept : %entry% $end

   1  start : prog

   2  prog : typedef mlexp end_marker_opt EOF

   3  end_marker_opt :
   4                 | SEMICOLON SEMICOLON

   5  typedef :
   6          | TYPE IDENTIFIER

   7  mult_exp : primary_exp_list_as_mlexp
   8           | mult_exp MUL primary_exp_list_as_mlexp
   9           | mult_exp DIV primary_exp_list_as_mlexp
  10           | mult_exp MOD primary_exp_list_as_mlexp

  11  unary_op : FST
  12           | SND

  13  primary_exp : IDENTIFIER
  14              | BCONSTANT
  15              | INTCONSTANT
  16              | unary_op
  17              | LPAREN mlexp RPAREN

  18  primary_exp_list : primary_exp
  19                   | primary_exp primary_exp_list

  20  primary_exp_list_as_mlexp : primary_exp_list

  21  mlexp : pair_exp
  22        | IF mlexp THEN mlexp ELSE mlexp
  23        | FUN IDENTIFIER ARROW mlexp
  24        | LET REC let_binding_list IN mlexp

  25  let_binding : IDENTIFIER EQ mlexp

  26  let_binding_list : let_binding
  27                   | let_binding AND let_binding_list

  28  add_exp : mult_exp
  29          | add_exp ADD mult_exp
  30          | add_exp SUB mult_exp

  31  comp_exp : add_exp
  32           | comp_exp EQ comp_exp
  33           | comp_exp GE comp_exp
  34           | comp_exp GT comp_exp
  35           | comp_exp LE comp_exp
  36           | comp_exp LT comp_exp
  37           | comp_exp NE comp_exp

  38  and_exp : comp_exp
  39          | and_exp BLAND and_exp

  40  or_exp : and_exp
  41         | or_exp BLOR or_exp

  42  pair_exp : or_exp
  43           | LPAREN pair_exp COMMA pair_exp RPAREN

  44  %entry% : '\001' start

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . start  (44)
	typedef : .  (5)

	TYPE  shift 3
	IDENTIFIER  reduce 5
	BCONSTANT  reduce 5
	INTCONSTANT  reduce 5
	FST  reduce 5
	SND  reduce 5
	LPAREN  reduce 5
	IF  reduce 5
	FUN  reduce 5
	LET  reduce 5

	start  goto 4
	prog  goto 5
	typedef  goto 6


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	typedef : TYPE . IDENTIFIER  (6)

	IDENTIFIER  shift 7
	.  error


state 4
	%entry% : '\001' start .  (44)

	.  reduce 44


state 5
	start : prog .  (1)

	.  reduce 1


state 6
	prog : typedef . mlexp end_marker_opt EOF  (2)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 13
	IF  shift 14
	FUN  shift 15
	LET  shift 16
	.  error

	mlexp  goto 17
	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	pair_exp  goto 23
	add_exp  goto 24
	comp_exp  goto 25
	and_exp  goto 26
	or_exp  goto 27


state 7
	typedef : TYPE IDENTIFIER .  (6)

	.  reduce 6


state 8
	primary_exp : IDENTIFIER .  (13)

	.  reduce 13


state 9
	primary_exp : BCONSTANT .  (14)

	.  reduce 14


state 10
	primary_exp : INTCONSTANT .  (15)

	.  reduce 15


state 11
	unary_op : FST .  (11)

	.  reduce 11


state 12
	unary_op : SND .  (12)

	.  reduce 12


state 13
	primary_exp : LPAREN . mlexp RPAREN  (17)
	pair_exp : LPAREN . pair_exp COMMA pair_exp RPAREN  (43)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 13
	IF  shift 14
	FUN  shift 15
	LET  shift 16
	.  error

	mlexp  goto 28
	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	pair_exp  goto 29
	add_exp  goto 24
	comp_exp  goto 25
	and_exp  goto 26
	or_exp  goto 27


state 14
	mlexp : IF . mlexp THEN mlexp ELSE mlexp  (22)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 13
	IF  shift 14
	FUN  shift 15
	LET  shift 16
	.  error

	mlexp  goto 30
	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	pair_exp  goto 23
	add_exp  goto 24
	comp_exp  goto 25
	and_exp  goto 26
	or_exp  goto 27


state 15
	mlexp : FUN . IDENTIFIER ARROW mlexp  (23)

	IDENTIFIER  shift 31
	.  error


state 16
	mlexp : LET . REC let_binding_list IN mlexp  (24)

	REC  shift 32
	.  error


state 17
	prog : typedef mlexp . end_marker_opt EOF  (2)
	end_marker_opt : .  (3)

	SEMICOLON  shift 33
	EOF  reduce 3

	end_marker_opt  goto 34


state 18
	mult_exp : mult_exp . MUL primary_exp_list_as_mlexp  (8)
	mult_exp : mult_exp . DIV primary_exp_list_as_mlexp  (9)
	mult_exp : mult_exp . MOD primary_exp_list_as_mlexp  (10)
	add_exp : mult_exp .  (28)

	MUL  shift 35
	DIV  shift 36
	MOD  shift 37
	ADD  reduce 28
	SUB  reduce 28
	EQ  reduce 28
	GE  reduce 28
	GT  reduce 28
	LE  reduce 28
	LT  reduce 28
	NE  reduce 28
	BLAND  reduce 28
	BLOR  reduce 28
	RPAREN  reduce 28
	COMMA  reduce 28
	SEMICOLON  reduce 28
	THEN  reduce 28
	ELSE  reduce 28
	AND  reduce 28
	IN  reduce 28
	EOF  reduce 28


state 19
	mult_exp : primary_exp_list_as_mlexp .  (7)

	.  reduce 7


state 20
	primary_exp : unary_op .  (16)

	.  reduce 16


state 21
	primary_exp_list : primary_exp .  (18)
	primary_exp_list : primary_exp . primary_exp_list  (19)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 38
	ADD  reduce 18
	SUB  reduce 18
	MUL  reduce 18
	DIV  reduce 18
	MOD  reduce 18
	EQ  reduce 18
	GE  reduce 18
	GT  reduce 18
	LE  reduce 18
	LT  reduce 18
	NE  reduce 18
	BLAND  reduce 18
	BLOR  reduce 18
	RPAREN  reduce 18
	COMMA  reduce 18
	SEMICOLON  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	AND  reduce 18
	IN  reduce 18
	EOF  reduce 18

	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 39


state 22
	primary_exp_list_as_mlexp : primary_exp_list .  (20)

	.  reduce 20


state 23
	mlexp : pair_exp .  (21)

	.  reduce 21


state 24
	add_exp : add_exp . ADD mult_exp  (29)
	add_exp : add_exp . SUB mult_exp  (30)
	comp_exp : add_exp .  (31)

	ADD  shift 40
	SUB  shift 41
	EQ  reduce 31
	GE  reduce 31
	GT  reduce 31
	LE  reduce 31
	LT  reduce 31
	NE  reduce 31
	BLAND  reduce 31
	BLOR  reduce 31
	RPAREN  reduce 31
	COMMA  reduce 31
	SEMICOLON  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	AND  reduce 31
	IN  reduce 31
	EOF  reduce 31


state 25
	comp_exp : comp_exp . EQ comp_exp  (32)
	comp_exp : comp_exp . GE comp_exp  (33)
	comp_exp : comp_exp . GT comp_exp  (34)
	comp_exp : comp_exp . LE comp_exp  (35)
	comp_exp : comp_exp . LT comp_exp  (36)
	comp_exp : comp_exp . NE comp_exp  (37)
	and_exp : comp_exp .  (38)

	EQ  shift 42
	GE  shift 43
	GT  shift 44
	LE  shift 45
	LT  shift 46
	NE  shift 47
	BLAND  reduce 38
	BLOR  reduce 38
	RPAREN  reduce 38
	COMMA  reduce 38
	SEMICOLON  reduce 38
	THEN  reduce 38
	ELSE  reduce 38
	AND  reduce 38
	IN  reduce 38
	EOF  reduce 38


state 26
	and_exp : and_exp . BLAND and_exp  (39)
	or_exp : and_exp .  (40)

	BLAND  shift 48
	BLOR  reduce 40
	RPAREN  reduce 40
	COMMA  reduce 40
	SEMICOLON  reduce 40
	THEN  reduce 40
	ELSE  reduce 40
	AND  reduce 40
	IN  reduce 40
	EOF  reduce 40


state 27
	or_exp : or_exp . BLOR or_exp  (41)
	pair_exp : or_exp .  (42)

	BLOR  shift 49
	RPAREN  reduce 42
	COMMA  reduce 42
	SEMICOLON  reduce 42
	THEN  reduce 42
	ELSE  reduce 42
	AND  reduce 42
	IN  reduce 42
	EOF  reduce 42


state 28
	primary_exp : LPAREN mlexp . RPAREN  (17)

	RPAREN  shift 50
	.  error


state 29
	mlexp : pair_exp .  (21)
	pair_exp : LPAREN pair_exp . COMMA pair_exp RPAREN  (43)

	COMMA  shift 51
	RPAREN  reduce 21


state 30
	mlexp : IF mlexp . THEN mlexp ELSE mlexp  (22)

	THEN  shift 52
	.  error


state 31
	mlexp : FUN IDENTIFIER . ARROW mlexp  (23)

	ARROW  shift 53
	.  error


state 32
	mlexp : LET REC . let_binding_list IN mlexp  (24)

	IDENTIFIER  shift 54
	.  error

	let_binding_list  goto 55
	let_binding  goto 56


state 33
	end_marker_opt : SEMICOLON . SEMICOLON  (4)

	SEMICOLON  shift 57
	.  error


state 34
	prog : typedef mlexp end_marker_opt . EOF  (2)

	EOF  shift 58
	.  error


state 35
	mult_exp : mult_exp MUL . primary_exp_list_as_mlexp  (8)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 38
	.  error

	primary_exp_list_as_mlexp  goto 59
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22


state 36
	mult_exp : mult_exp DIV . primary_exp_list_as_mlexp  (9)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 38
	.  error

	primary_exp_list_as_mlexp  goto 60
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22


state 37
	mult_exp : mult_exp MOD . primary_exp_list_as_mlexp  (10)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 38
	.  error

	primary_exp_list_as_mlexp  goto 61
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22


state 38
	primary_exp : LPAREN . mlexp RPAREN  (17)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 13
	IF  shift 14
	FUN  shift 15
	LET  shift 16
	.  error

	mlexp  goto 28
	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	pair_exp  goto 23
	add_exp  goto 24
	comp_exp  goto 25
	and_exp  goto 26
	or_exp  goto 27


state 39
	primary_exp_list : primary_exp primary_exp_list .  (19)

	.  reduce 19


state 40
	add_exp : add_exp ADD . mult_exp  (29)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 38
	.  error

	mult_exp  goto 62
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22


state 41
	add_exp : add_exp SUB . mult_exp  (30)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 38
	.  error

	mult_exp  goto 63
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22


state 42
	comp_exp : comp_exp EQ . comp_exp  (32)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 38
	.  error

	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	add_exp  goto 24
	comp_exp  goto 64


state 43
	comp_exp : comp_exp GE . comp_exp  (33)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 38
	.  error

	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	add_exp  goto 24
	comp_exp  goto 65


state 44
	comp_exp : comp_exp GT . comp_exp  (34)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 38
	.  error

	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	add_exp  goto 24
	comp_exp  goto 66


state 45
	comp_exp : comp_exp LE . comp_exp  (35)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 38
	.  error

	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	add_exp  goto 24
	comp_exp  goto 67


state 46
	comp_exp : comp_exp LT . comp_exp  (36)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 38
	.  error

	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	add_exp  goto 24
	comp_exp  goto 68


state 47
	comp_exp : comp_exp NE . comp_exp  (37)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 38
	.  error

	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	add_exp  goto 24
	comp_exp  goto 69


state 48
	and_exp : and_exp BLAND . and_exp  (39)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 38
	.  error

	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	add_exp  goto 24
	comp_exp  goto 25
	and_exp  goto 70


state 49
	or_exp : or_exp BLOR . or_exp  (41)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 38
	.  error

	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	add_exp  goto 24
	comp_exp  goto 25
	and_exp  goto 26
	or_exp  goto 71


state 50
	primary_exp : LPAREN mlexp RPAREN .  (17)

	.  reduce 17


state 51
	pair_exp : LPAREN pair_exp COMMA . pair_exp RPAREN  (43)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 13
	.  error

	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	pair_exp  goto 72
	add_exp  goto 24
	comp_exp  goto 25
	and_exp  goto 26
	or_exp  goto 27


state 52
	mlexp : IF mlexp THEN . mlexp ELSE mlexp  (22)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 13
	IF  shift 14
	FUN  shift 15
	LET  shift 16
	.  error

	mlexp  goto 73
	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	pair_exp  goto 23
	add_exp  goto 24
	comp_exp  goto 25
	and_exp  goto 26
	or_exp  goto 27


state 53
	mlexp : FUN IDENTIFIER ARROW . mlexp  (23)

	IDENTIFIER  shift 8
	BCONSTANT  shift 9
	INTCONSTANT  shift 10
	FST  shift 11
	SND  shift 12
	LPAREN  shift 13
	IF  shift 14
	FUN  shift 15
	LET  shift 16
	.  error

	mlexp  goto 74
	mult_exp  goto 18
	primary_exp_list_as_mlexp  goto 19
	unary_op  goto 20
	primary_exp  goto 21
	primary_exp_list  goto 22
	pair_exp  goto 23
	add_exp  goto 24
	comp_exp  goto 25
	and_exp  goto 26
	or_exp  goto 27


state 54
	let_binding : IDENTIFIER . EQ mlexp  (25)

	EQ  shift 75
	.  error


state 55
	mlexp : LET REC let_binding_list . IN mlexp  (24)

	IN  shift 76
	.  error


state 56
	let_binding_list : let_binding .  (26)
	let_binding_list : let_binding . AND let_binding_list  (27)

	AND  shift 77
	IN  reduce 26


state 57
	end_marker_opt : SEMICOLON SEMICOLON .  (4)

	.  reduce 4


state 58
	prog : typedef mlexp end_marker_opt EOF .  (2)

	.  reduce 2


state 59
	mult_exp : mult_exp MUL primary_exp_list_as_mlexp .  (8)

	.  reduce 8


state 60
	mult_exp : mult_exp DIV primary_exp_list_as_mlexp .  (9)

	.  reduce 9


state 61
	mult_exp : mult_exp MOD primary_exp_list_as_mlexp .  (10)

	.  reduce 10


state 62
	mult_exp : mult_exp . MUL primary_exp_list_as_mlexp  (8)
	mult_exp : mult_exp . DIV primary_exp_list_as_mlexp  (9)
	mult_exp : mult_exp . MOD primary_exp_list_as_mlexp  (10)
	add_exp : add_exp ADD mult_exp .  (29)

	MUL  shift 35
	DIV  shift 36
	MOD  shift 37
	ADD  reduce 29
	SUB  reduce 29
	EQ  reduce 29
	GE  reduce 29
	GT  reduce 29
	LE  reduce 29
	LT  reduce 29
	NE  reduce 29
	BLAND  reduce 29
	BLOR  reduce 29
	RPAREN  reduce 29
	COMMA  reduce 29
	SEMICOLON  reduce 29
	THEN  reduce 29
	ELSE  reduce 29
	AND  reduce 29
	IN  reduce 29
	EOF  reduce 29


state 63
	mult_exp : mult_exp . MUL primary_exp_list_as_mlexp  (8)
	mult_exp : mult_exp . DIV primary_exp_list_as_mlexp  (9)
	mult_exp : mult_exp . MOD primary_exp_list_as_mlexp  (10)
	add_exp : add_exp SUB mult_exp .  (30)

	MUL  shift 35
	DIV  shift 36
	MOD  shift 37
	ADD  reduce 30
	SUB  reduce 30
	EQ  reduce 30
	GE  reduce 30
	GT  reduce 30
	LE  reduce 30
	LT  reduce 30
	NE  reduce 30
	BLAND  reduce 30
	BLOR  reduce 30
	RPAREN  reduce 30
	COMMA  reduce 30
	SEMICOLON  reduce 30
	THEN  reduce 30
	ELSE  reduce 30
	AND  reduce 30
	IN  reduce 30
	EOF  reduce 30


64: shift/reduce conflict (shift 42, reduce 32) on EQ
64: shift/reduce conflict (shift 43, reduce 32) on GE
64: shift/reduce conflict (shift 44, reduce 32) on GT
64: shift/reduce conflict (shift 45, reduce 32) on LE
64: shift/reduce conflict (shift 46, reduce 32) on LT
64: shift/reduce conflict (shift 47, reduce 32) on NE
state 64
	comp_exp : comp_exp . EQ comp_exp  (32)
	comp_exp : comp_exp EQ comp_exp .  (32)
	comp_exp : comp_exp . GE comp_exp  (33)
	comp_exp : comp_exp . GT comp_exp  (34)
	comp_exp : comp_exp . LE comp_exp  (35)
	comp_exp : comp_exp . LT comp_exp  (36)
	comp_exp : comp_exp . NE comp_exp  (37)

	EQ  shift 42
	GE  shift 43
	GT  shift 44
	LE  shift 45
	LT  shift 46
	NE  shift 47
	BLAND  reduce 32
	BLOR  reduce 32
	RPAREN  reduce 32
	COMMA  reduce 32
	SEMICOLON  reduce 32
	THEN  reduce 32
	ELSE  reduce 32
	AND  reduce 32
	IN  reduce 32
	EOF  reduce 32


65: shift/reduce conflict (shift 42, reduce 33) on EQ
65: shift/reduce conflict (shift 43, reduce 33) on GE
65: shift/reduce conflict (shift 44, reduce 33) on GT
65: shift/reduce conflict (shift 45, reduce 33) on LE
65: shift/reduce conflict (shift 46, reduce 33) on LT
65: shift/reduce conflict (shift 47, reduce 33) on NE
state 65
	comp_exp : comp_exp . EQ comp_exp  (32)
	comp_exp : comp_exp . GE comp_exp  (33)
	comp_exp : comp_exp GE comp_exp .  (33)
	comp_exp : comp_exp . GT comp_exp  (34)
	comp_exp : comp_exp . LE comp_exp  (35)
	comp_exp : comp_exp . LT comp_exp  (36)
	comp_exp : comp_exp . NE comp_exp  (37)

	EQ  shift 42
	GE  shift 43
	GT  shift 44
	LE  shift 45
	LT  shift 46
	NE  shift 47
	BLAND  reduce 33
	BLOR  reduce 33
	RPAREN  reduce 33
	COMMA  reduce 33
	SEMICOLON  reduce 33
	THEN  reduce 33
	ELSE  reduce 33
	AND  reduce 33
	IN  reduce 33
	EOF  reduce 33


66: shift/reduce conflict (shift 42, reduce 34) on EQ
66: shift/reduce conflict (shift 43, reduce 34) on GE
66: shift/reduce conflict (shift 44, reduce 34) on GT
66: shift/reduce conflict (shift 45, reduce 34) on LE
66: shift/reduce conflict (shift 46, reduce 34) on LT
66: shift/reduce conflict (shift 47, reduce 34) on NE
state 66
	comp_exp : comp_exp . EQ comp_exp  (32)
	comp_exp : comp_exp . GE comp_exp  (33)
	comp_exp : comp_exp . GT comp_exp  (34)
	comp_exp : comp_exp GT comp_exp .  (34)
	comp_exp : comp_exp . LE comp_exp  (35)
	comp_exp : comp_exp . LT comp_exp  (36)
	comp_exp : comp_exp . NE comp_exp  (37)

	EQ  shift 42
	GE  shift 43
	GT  shift 44
	LE  shift 45
	LT  shift 46
	NE  shift 47
	BLAND  reduce 34
	BLOR  reduce 34
	RPAREN  reduce 34
	COMMA  reduce 34
	SEMICOLON  reduce 34
	THEN  reduce 34
	ELSE  reduce 34
	AND  reduce 34
	IN  reduce 34
	EOF  reduce 34


67: shift/reduce conflict (shift 42, reduce 35) on EQ
67: shift/reduce conflict (shift 43, reduce 35) on GE
67: shift/reduce conflict (shift 44, reduce 35) on GT
67: shift/reduce conflict (shift 45, reduce 35) on LE
67: shift/reduce conflict (shift 46, reduce 35) on LT
67: shift/reduce conflict (shift 47, reduce 35) on NE
state 67
	comp_exp : comp_exp . EQ comp_exp  (32)
	comp_exp : comp_exp . GE comp_exp  (33)
	comp_exp : comp_exp . GT comp_exp  (34)
	comp_exp : comp_exp . LE comp_exp  (35)
	comp_exp : comp_exp LE comp_exp .  (35)
	comp_exp : comp_exp . LT comp_exp  (36)
	comp_exp : comp_exp . NE comp_exp  (37)

	EQ  shift 42
	GE  shift 43
	GT  shift 44
	LE  shift 45
	LT  shift 46
	NE  shift 47
	BLAND  reduce 35
	BLOR  reduce 35
	RPAREN  reduce 35
	COMMA  reduce 35
	SEMICOLON  reduce 35
	THEN  reduce 35
	ELSE  reduce 35
	AND  reduce 35
	IN  reduce 35
	EOF  reduce 35


68: shift/reduce conflict (shift 42, reduce 36) on EQ
68: shift/reduce conflict (shift 43, reduce 36) on GE
68: shift/reduce conflict (shift 44, reduce 36) on GT
68: shift/reduce conflict (shift 45, reduce 36) on LE
68: shift/reduce conflict (shift 46, reduce 36) on LT
68: shift/reduce conflict (shift 47, reduce 36) on NE
state 68
	comp_exp : comp_exp . EQ comp_exp  (32)
	comp_exp : comp_exp . GE comp_exp  (33)
	comp_exp : comp_exp . GT comp_exp  (34)
	comp_exp : comp_exp . LE comp_exp  (35)
	comp_exp : comp_exp . LT comp_exp  (36)
	comp_exp : comp_exp LT comp_exp .  (36)
	comp_exp : comp_exp . NE comp_exp  (37)

	EQ  shift 42
	GE  shift 43
	GT  shift 44
	LE  shift 45
	LT  shift 46
	NE  shift 47
	BLAND  reduce 36
	BLOR  reduce 36
	RPAREN  reduce 36
	COMMA  reduce 36
	SEMICOLON  reduce 36
	THEN  reduce 36
	ELSE  reduce 36
	AND  reduce 36
	IN  reduce 36
	EOF  reduce 36


69: shift/reduce conflict (shift 42, reduce 37) on EQ
69: shift/reduce conflict (shift 43, reduce 37) on GE
69: shift/reduce conflict (shift 44, reduce 37) on GT
69: shift/reduce conflict (shift 45, reduce 37) on LE
69: shift/reduce conflict (shift 46, reduce 37) on LT
69: shift/reduce conflict (shift 47, reduce 37) on NE
state 69
	comp_exp : comp_exp . EQ comp_exp  (32)
	comp_exp : comp_exp . GE comp_exp  (33)
	comp_exp : comp_exp . GT comp_exp  (34)
	comp_exp : comp_exp . LE comp_exp  (35)
	comp_exp : comp_exp . LT comp_exp  (36)
	comp_exp : comp_exp . NE comp_exp  (37)
	comp_exp : comp_exp NE comp_exp .  (37)

	EQ  shift 42
	GE  shift 43
	GT  shift 44
	LE  shift 45
	LT  shift 46
	NE  shift 47
	BLAND  reduce 37
	BLOR  reduce 37
	RPAREN  reduce 37
	COMMA  reduce 37
	SEMICOLON  reduce 37
	THEN  reduce 37
	ELSE  reduce 37
	AND  reduce 37
	IN  reduce 37
	EOF  reduce 37


70: shift/reduce conflict (shift 48, reduce 39) on BLAND
state 70
	and_exp : and_exp . BLAND and_exp  (39)
	and_exp : and_exp BLAND and_exp .  (39)

	BLAND  shift 48
	BLOR  reduce 39
	RPAREN  reduce 39
	COMMA  reduce 39
	SEMICOLON  reduce 39
	THEN  reduce 39
	ELSE  reduce 39
	AND  reduce 39
	IN  reduce 39
	EOF  reduce 39


71: shift/reduce conflict (shift 49, reduce 41) on BLOR
state 71
	or_exp : or_exp . BLOR or_exp  (41)
	or_exp : or_exp BLOR or_exp .  (41)
